--- a/project/producto/templates/producto/base.html
+++ b/project/producto/templates/producto/base.html
@@ -1,11 +1,7 @@
 {% extends 'home/base.html' %}
 
 {% block content %}
-
-    {% block title %}
-        Productos
-    {% endblock title %}
-
+    <p>Productos</p>
     {% block producto %}
         
     {% endblock producto %}
