--- a/project/comentario/templates/comentario/index.html
+++ b/project/comentario/templates/comentario/index.html
@@ -12,13 +12,20 @@
         <button type="submit">Comentar</button>
     </form>
 
-    <h3>Comentarios existentes:</h3>
-    {% for comentario in comentarios %}
-        <p>{{ comentario.text }}</p>
-        <small>{{ comentario.date_added }}</small>
-    {% empty %}
-        <p>No hay comentarios aún.</p>
-    {% endfor %}
+    <h2>Comentarios existentes:</h2>
+    <ul>
+        {% for comentario in comentarios %}
+            <li>
+                <p>{{ comentario.texto }}</p>
+                <p>{{comentario.fecha_creacion}}</p>
+                <form method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="eliminar_comentario" value="{{ comentario.id }}">
+                    <button type="submit">Eliminar</button>
+                </form>
+            </li>
+        {% endfor %}
+    </ul>
 
     <p><a href="{% url 'home:index' %}">Ir atrás</a></p>
 {% endblock content %}
