--- a/project/producto/templates/producto/base.html
+++ b/project/producto/templates/producto/base.html
@@ -1,7 +1,7 @@
 {% extends 'home/base.html' %}
 
 {% block content %}
-    <p>Productos</p>
+    <h1>PRODUCTOS</h1>
     {% block producto %}
         
     {% endblock producto %}
