--- a/project/home/templates/home/about.html
+++ b/project/home/templates/home/about.html
@@ -1,9 +1,9 @@
 {% extends 'home/base.html' %}
-{% block title %}
-    <h2>Quienes somos?</h2>
-{% endblock title %}
-
 {% block content %}
+<br>
+<h2>SOBRE NOSOTROS</h2>
+<br>
     <p>una paguina para que puedas vender y comprar camisetas de futboll</p>
-    <button><a href="{% url 'home:index' %}">Ir atras</a></button>
+    <br>
+    <a href="{% url 'home:index' %}">Ir atras</a>
 {% endblock content %}
