--- a/project/home/templates/home/base.html
+++ b/project/home/templates/home/base.html
@@ -1,19 +1,32 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>CASACA Tienda</h1>
-    
-    {% block title %}   
-    {% endblock title %}
+<html lang="es">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>CASACA Tienda</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="{% static 'home/assets/favicon.ico' %}" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="{% static 'home/css/styles.css' %}" rel="stylesheet" />
+    </head>
+    <body>
+       <nav>
+         {% include 'home/navbar.html' %}
+        </nav>
+        <!-- Page Content-->
+        <div class="container px-4 px-lg-5">
+            <div class="mb-lg-5 m-5">
+                {% block content %}  
+                {% endblock content %}
+            </div>
+        </div>    
 
-    {% block content %}
-    {% endblock content %}
-
-    
-</body>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
