--- a/project/home/templates/home/about.html
+++ b/project/home/templates/home/about.html
@@ -3,7 +3,18 @@
 <br>
 <h2>SOBRE NOSOTROS</h2>
 <br>
-    <p>una paguina para que puedas vender y comprar camisetas de futboll</p>
+    <p>Mi nombre es Nicolás Meza, y tengo 27 años. Soy diseñador gráfico y desde mi infancia,
+    siempre me ha apasionado el mundo de la computación. Desde muy joven, compraba los componentes necesarios y construía mi propia computadora.
+    Además, decidí aprender a interactuar con Python, lo que me permitió adentrarme aún más en este emocionante campo.</p>
+    
+    <p>Gracias a mi interés y dedicación, logré desarrollar un servicio web que ofrece la posibilidad de comprar y vender camisetas de fútbol de todo el mundo y de todas las épocas.
+    Esta plataforma ha sido un proyecto que me ha apasionado, ya que combina mi amor por la tecnología con mi pasión por el fútbol. En ella,
+    los aficionados pueden explorar una amplia variedad de camisetas históricas y contemporáneas, lo que facilita la búsqueda de prendas únicas y la conexión entre fanáticos de todo el mundo.</p>
+
+    <p>Estoy emocionado por seguir desarrollando esta plataforma y expandiendo su alcance, ofreciendo a los amantes del fútbol una experiencia única y accesible para encontrar y
+    adquirir esas camisetas que representan momentos memorables de la historia del deporte. Además, esta experiencia me ha enseñado la importancia de la combinación
+    entre diseño gráfico y desarrollo web, permitiéndome fusionar mis habilidades y crear un proyecto que me llena de satisfacción.</p>
+
     <br>
     <a href="{% url 'home:index' %}">Ir atras</a>
 {% endblock content %}
