--- a/project/home/templates/home/navbar.html
+++ b/project/home/templates/home/navbar.html
@@ -10,8 +10,9 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'cliente:index' %}">Clietes</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'comentario:index' %}">Comentarios</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'home:about' %}">Sobre nosotros</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'home:login' %}">iniciar secion</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'home:logout' %}">cerrar secion</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'home:registro' %}">Registrar</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'home:login' %}">iniciar sesion</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'home:logout' %}">cerrar sesion</a></li>
             </ul>
         </div>
     </div>
